# jencrm

./: .env  Cargo.toml  LICENSE  README.md
frontend/: app.js  index.html  style.css
migrations/: 20251006172231_create_clients_table.sql  20251008174344_create_deals_table_fixed.sql  20251008180749_change_deals_to_float.sql  20251008181014_recreate_deals_table.sql
src/: main.rs
src/modules/: clients.rs  database.rs  deals.rs  mod.rs
